# Fleetcheck

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: check.rs  cli.rs  config.rs  main.rs  metrics.rs  report.rs  script.sh  ssh.rs
